Less Useless Filter
Signed-off-by: ripkoi123 <rogper94@ymail.com>

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -57,6 +57,7 @@
                 {% endfor %}
             {% endif %}
             {% block content %}{% endblock %}
+            {% block content1 %}{% endblock %}
           </div>
         </div>
       </main>
