--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
-{% block content %}
+{% block content1 %}
   <form method="get">
     {{ filter.form.as_p }}
     <button type="submit">Search</button>
