--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 
-{% block content1 %}
+{% block sidebar %}
   <form method="get">
     {{ filter.form.as_p }}
     <button type="submit">Search</button>
