Forms In One Page First Try
Signed-off-by: ripkoi123 <rogper94@ymail.com>

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -57,8 +57,11 @@
                 {% endfor %}
             {% endif %}
             {% block content %}{% endblock %}
+            
+            </div>
+          <div class="col-md-4">
             {% block content1 %}{% endblock %}
-          </div>
+            </div>
         </div>
       </main>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
