--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -1,4 +1,4 @@
-{% block content1 %}
+{% block content %}
   <form method="get">
     {{ filter.form.as_p }}
     <button type="submit">Search</button>
